[package]
name = "binary_serde"
version = "0.1.7"
edition = "2021"
authors = ["Roee Shoshani"]
description = "simple binary serialization and deserialization"
repository = "https://github.com/roeeshoshani/binary_serde"
license = "MIT"
keywords = ["binary", "serialization", "deserialization", "serde", "format"]
categories = ["embedded", "encoding", "no-std", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["binary_serde_macros"]

[dependencies]
binary_serde_macros = { path = "binary_serde_macros", version = "0.1.7" }
array-init = "2.1.0"
recursive_array = "0.1.2"

[features]
std = []
